--- a/cms/templates/widgets/sock_links.html
+++ b/cms/templates/widgets/sock_links.html
@@ -10,24 +10,9 @@ from django.utils.translation import ugettext as _
         partner_email = settings.PARTNER_SUPPORT_EMAIL
         links = [
             {
-                'href': 'http://docs.edx.org',
-                'sr_mouseover_text': _('Access documentation on http://docs.edx.org'),
-                'text': _('edX Documentation'),
-                'condition': True
-            }, {
-                'href': 'https://open.edx.org',
-                'sr_mouseover_text': _('Access the Open edX Portal'),
-                'text': _('Open edX Portal'),
-                'condition': True
-            }, {
-                'href': 'https://www.edx.org/course/overview-creating-edx-course-edx-edx101#.VO4eaLPF-n1',
-                'sr_mouseover_text': _('Enroll in edX101: Overview of Creating an edX Course'),
-                'text': _('Enroll in edX101'),
-                'condition': True
-            }, {
-                'href': 'https://www.edx.org/course/creating-course-edx-studio-edx-studiox',
-                'sr_mouseover_text': _('Enroll in StudioX: Creating a Course with edX Studio'),
-                'text': _('Enroll in StudioX'),
+                'href': 'http://docs.online.vrook.co/build/html',
+                'sr_mouseover_text': _('Access documentation on http://docs.online.vrook.co/build/html'),
+                'text': _('Vrook Documentation'),
                 'condition': True
             }, {
                 'href': 'mailto:{email}'.format(email=partner_email),
