added support link for vrook studio docs

--- a/cms/templates/widgets/sock_links.html
+++ b/cms/templates/widgets/sock_links.html
@@ -10,7 +10,7 @@ from django.utils.translation import ugettext as _
         partner_email = settings.PARTNER_SUPPORT_EMAIL
         links = [
             {
-                'href': 'http://docs.online.vrook.co/build/html',
+                'href': 'https://docs.online.vrook.co/build/html',
                 'sr_mouseover_text': _('Access documentation on http://docs.online.vrook.co/build/html'),
                 'text': _('Vrook Documentation'),
                 'condition': True
