--- a/lms/templates/main.html
+++ b/lms/templates/main.html
@@ -141,36 +141,17 @@ from pipeline_mako import render_require_js_path_overrides
     <meta name="google-site-verification" content="${google_site_verification_id}" />
   % endif
 
-  <meta name="openedx-release-line" content="${RELEASE_LINE}" />
+<meta name="openedx-release-line" content="${RELEASE_LINE}" />
 
-<!--
- <% ga_acct = static.get_value("GOOGLE_ANALYTICS_ACCOUNT", settings.GOOGLE_ANALYTICS_ACCOUNT) %>
- % if ga_acct:
-    <script type="text/javascript">
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', '${ga_acct | n, js_escaped_string}']);
-    _gaq.push(['_trackPageview']);
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-178476461-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-   (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-    </script>
- % endif 
--->
-
-<!-- Global site tag (gtag.js) - Google Analytics
- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123456789-1"></script>
- <script>
-   window.dataLayer = window.dataLayer || [];
-   function gtag(){dataLayer.push(arguments);}
-   gtag('js', new Date());
-
-  gtag('config', 'UA-123456789--1');
--->
+  gtag('config', 'UA-178476461-1');
 </script>
-
 
 <% branch_key = static.get_value("BRANCH_IO_KEY", settings.BRANCH_IO_KEY) %>
 % if branch_key and not is_from_mobile_app:
